# financial-ai

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  DEMO_GUIDE.md  FEATURES.md  ONBOARDING.md  README.md  SECURITY.md  SOURCE_MAP.md  TECH_QA_PREP.md
launchd/: com.financialai.daily-pipeline.plist.template  com.financialai.dashboard.plist.template
prompts/: report.j2
scripts/: deploy_local.sh  run_dashboard.py  run_pipeline.py
src/agents/: __init__.py  composer_agent.py  context_slicer.py  etf_composer_agent.py  financials_agent.py  gateway.py  growth_agent.py  holdings_agent.py  mcp_servers.py  orchestrator.py  postcheck.py  risk_agent.py  schemas.py  source_citations.py  valuation_agent.py
src/agents/prompts/: composer.md  (+6 more)
src/eval/: rubric.py  rules.py
src/features/: builder.py
src/fio/: asset_class.py
src/ingest/: yahoo.py
src/news/: __init__.py  enrichment.py  sentiment.py
src/report/: composer.py
src/trading_stub/: signal.py
src/web/: __init__.py  access_log.py  app.py  cache.py  jobs.py  pipeline_runner.py  security.py  tunnel.py
tests/: test_agents_orchestrator.py  test_agents_schemas.py  test_asset_class.py  test_community_summary.py  test_composer_agent.py  test_eval_etf.py  test_features_builder.py  test_mcp_servers.py  test_news_enrichment.py  test_news_sentiment.py  test_postcheck.py  test_report_context.py  test_run_pipeline.py  test_source_citations.py  test_web_cache.py  test_web_dashboard.py  test_web_security.py  test_yahoo_community.py  test_yahoo_ingester.py
(+5 files in other folders)
