[project]
name = "financial-ai"
version = "0.1.0"
description = "Yahoo Finance → LLM 리포트 → 규칙·Judge 평가 → 신호 스텁 파이프라인"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "yfinance>=0.2.36",
    "pandas>=2.0",
    "numpy>=1.24",
    "openai>=1.0",
    "markdownify>=0.14.1",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "tiktoken>=0.5",
    "pyyaml>=6.0",
    "openai-agents==0.17.1",
    "transformers>=4.40.0",
    "torch>=2.2.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
